register check box

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ body {
 }
 
 .step { 
-    display: none; 
+    /*display: none;*/
 }
 
 .active { 
@@ -409,3 +409,59 @@ body {
     align-items: center;
     margin: 4px;
 }
+
+/* From Uiverse.io by catraco */ 
+/*------ Settings ------*/
+.container-szem {
+    --color: var(--c);
+    --size: 25px;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    position: relative;
+    cursor: pointer;
+    font-size: var(--size);
+    user-select: none;
+    fill: var(--color);
+  }
+  
+  .container-szem .szem1 {
+    position: absolute;
+    animation: keyframes-fill .5s;
+  }
+  
+  .container-szem .szem2 {
+    position: absolute;
+    animation: keyframes-fill .5s;
+    display: none;
+  }
+  
+  /* ------ On check event ------ */
+  .container-szem1 input:checked ~ .szem1 {
+    display: none;
+  }
+  
+  .container-szem input:checked ~ .szem2 {
+    display: block;
+  }
+  
+  /* ------ Hide the default checkbox ------ */
+  .container-szem input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* ------ Animation ------ */
+  @keyframes keyframes-fill {
+    0% {
+      transform: scale(0);
+      opacity: 0;
+    }
+  
+    50% {
+      transform: scale(1.2);
+    }
+  }
