--- a/styles.css
+++ b/styles.css
@@ -83,10 +83,10 @@ body {
 }
 
 .step { 
-    display: none; 
+    display: none;
 }
 
-.active { 
+.step.active { 
     display: flex;
     justify-content: center;
 }
