--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,17 @@ body {
 
 }
 
+.testalkat {
+    width: 95%;
+    margin: 5px;
+    border-radius: 10px;
+    border: 0
+}
+
+.testalkatin:checked + .testalkat {
+    border: 3px solid var(--c);
+}
+
 .step { 
     display: none;
 }
@@ -93,13 +104,10 @@ body {
 
 
 .error {
-    display: none;
-    padding: 8px;
-    margin-top: 5px;
+    height: 25px;
+    padding: 0;
+    margin: 0;
     color: red;
-    border: red;
-    border-radius: 8px;
-    background-color: rgb(238, 133, 133);
 }
 
 .progress-calorie {
@@ -479,9 +487,7 @@ body {
 /*jelszót megjelenítő gomb*/
 
 .st_kep{
-    width: 27.5rem;
-    height: 22rem;
-    margin-top: 1rem;
+    width: 100px;
 }
 
 #bodyfat-image{
