--- a/styles.css
+++ b/styles.css
@@ -351,6 +351,18 @@ body {
     margin: auto;
 }
 
+.ujrakuldgomb {
+    background-color: #eee;
+    border: none;
+    font-size: 1rem;
+    width: 100%;
+    height: 60px;
+    border-radius: 10px;
+    color: #4d648d;
+    cursor: pointer;
+    margin: 1rem 0;
+}
+
 /*előre gomb regsztrációs oldalon*/
 .nextgomb{
     background-color: #eee;
@@ -364,12 +376,6 @@ body {
     margin: 1rem 0;
 }
    
-.nextgomb:active {
-    color: #0072b1;
-    box-shadow: 0 0.2rem #dfd9d9;
-    transform: translateY(0.2rem);
-}
-   
 .nextgomb:hover:not(:disabled) {
     background: #0F1C2E;
     color: white;
@@ -379,6 +385,7 @@ body {
     cursor: auto;
     color: grey;
 }
+
 
 .backgomb{
     background-color: #eee;
@@ -393,11 +400,7 @@ body {
 }
  /*előre gomb regsztrációs oldalon*/
  /*hátra gomb regsztrációs oldalon*/  
-.backgomb:active {
-    color: #0072b1;
-    box-shadow: 0 0.2rem #dfd9d9;
-    transform: translateY(0.2rem);
-}
+
    
 .backgomb:hover:not(:disabled) {
     background: #0F1C2E;
