--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     width: 100%;
     height: 100vh;
     background-color: var(--base-color);
-    opacity: 0.5;
+    opacity: 0.25;
 }
 
 #hero-text {
@@ -354,6 +354,23 @@ body {
     margin: auto;
 }
 
+
+#keret  a{
+    color:var(--text-color);
+}
+#keret a:active{
+    color:var(--text-color);
+}
+#keret a:link{
+    color:var(--text-color);
+}
+#keret a:visited{
+    color: var(--text-color);
+}
+#keret a:hover{
+    color: var(--text-color);
+}
+
 .ujrakuldgomb {
     background-color: #eee;
     border: none;
@@ -374,13 +391,13 @@ body {
     width: 13.5rem;
     height: 2.5rem;
     border-radius: 10px;
-    color: #4d648d;
+    color: var(--h);
     cursor: pointer;
     margin: 1rem 0;
 }
    
 .nextgomb:hover:not(:disabled) {
-    background: #0F1C2E;
+    background: var(--h);
     color: white;
 }
    
@@ -397,7 +414,7 @@ body {
     width: 13.5rem;
     height: 2.5rem;
     border-radius: 10px;
-    color: #4d648d;
+    color: var(--h);
     cursor: pointer;
     margin: 1rem 0;
 }
@@ -406,7 +423,7 @@ body {
 
    
 .backgomb:hover:not(:disabled) {
-    background: #0F1C2E;
+    background: var(--h);
     color: white;
 }
    
@@ -417,7 +434,7 @@ body {
 /*hátra gomb regsztrációs oldalon*/  
 /*jelszót megjelenítő gomb*/
 .workout-card {
-    background-color: var(--d);
+    background-color: var(--h);
     border-radius: 10px;
     height: 50px;
     display: flex;
@@ -532,3 +549,4 @@ body {
 .w-plan-bg {
     background-color: var(--f);
 }
+
