--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 #hero {
-    background-image: url(img/man-1282232_1920.jpg);
+    background-image: url(../img/man-1282232_1920.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -507,10 +507,24 @@ body {
       transform: scale(1.2);
     }
 }
-/*jelszót megjelenítő gomb*/
 
 .st_kep{
-    width: 100px;
+    width: 200px;
+    height: 200px;
+    border-radius: 8px;
+}
+
+.fokuszaltizomcsoport {
+    background: var(--h); 
+    width: 100%;
+    height: 110px;
+    border-radius: 8px;
+}
+
+.serulttest {
+    width: 100%;
+    height: 210px;
+    border-radius: 8px;
 }
 
 #bodyfat-image{
