--- a/css/styles.css
+++ b/css/styles.css
@@ -569,13 +569,16 @@ body {
 }
 
 .fokuszaltizomcsoport {
-    background: var(--h); 
     width: 100%;
-    height: 100px;
+    height: 210px;
     border-radius: 8px;
     
 }
-
+.fokuszaltizomcsoport img{
+    width:100%;
+    height: 100%;
+    border-radius: 8px;
+}
 .serulttest {
     width: 100%;
     height: 210px;
