--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
     --text-color: #FFFFFF;
     --i: #081c15;
 }
+.link{
+    text-decoration: none;
+    color: white;
+}
 
 body {
     background-color: var(--base-color);
