--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,9 @@
     text-decoration: none;
     color: white;
 }
-
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
 body {
     background-color: var(--base-color);
     color: var(--text-color);
@@ -59,52 +61,44 @@ body {
 }
 
 .index_box{
-    height: 100vh;
+    position: absolute;
+    bottom: 20%;         /* távolság a kép aljától */
+    left: 10%;   
     max-width: 60rem;
-    padding-left: 10px;
+    color: white;
 }
+
 .index_box h1{
-    font-size: 2.5rem;
+    font-size: 2.3rem;
 }
+
 .index_box p{
     font-size: 1.3rem;
 }
+
 .index_box p:nth-child(2){
     width: 40rem;
 }
+
 .index_box button {
-    position: relative; 
+    position: relative;;
     cursor: pointer;
     overflow: hidden;
-    width: 18rem;
+    width: 10rem;
     height: 4em;
     border: 2px solid var(--base-color);
     border-radius: 10px;
     background-color: var(--text-color);
     color: var(--base-color);
     transition: color 0.5s ease;
-    z-index: 1;
+    z-index: 1; 
 }
-/*.index_box button::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    
-    border-radius: inherit;
-    z-index: -1;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 0.5s ease;
-}
-.index_box button:hover::before {
-    transform: scaleX(1);
-}  */
+
 .index_box button:hover {
     color: white;
     background: var(--base-color);
 }
 
-  
 .hidden {
     display: none !important;
 }
@@ -198,10 +192,10 @@ body {
     justify-content: center;
     padding: 15px;
     gap: 20px;
-  }
+}
   
-  /* for all social containers*/
-  .socialContainer {
+/* for all social containers*/
+.socialContainer {
     width: 52px;
     height: 52px;
     background-color: rgb(65, 29, 131);
@@ -211,50 +205,50 @@ body {
     overflow: hidden;
     transition-duration: 0.3s;
     border-radius: 30px;
-  }
-  /* instagram*/
-  .containerOne:hover {
+}
+/* instagram*/
+.containerOne:hover {
     background-color: #d62976;
     transition-duration: 0.3s;
     transform: scale(1.2);
-  }
-  /* twitter*/
-  .containerTwo:hover {
+}
+/* twitter*/
+.containerTwo:hover {
     background-color: #00acee;
     transition-duration: 0.3s;
     transform: scale(1.2);
-  }
-  /* linkdin*/
-  .containerThree:hover {
+}
+/* linkdin*/
+.containerThree:hover {
     background-color: #0072b1;
     transition-duration: 0.3s;
     transform: scale(1.2);
-  }
+}
   /* Whatsapp*/
-  .containerFour:hover {
+.containerFour:hover {
     background-color: #128c7e;
     transition-duration: 0.3s;
     transform: scale(1.2);
-  }
+}
   
-  .socialContainer:active {
+.socialContainer:active {
     transform: scale(0.9);
     transition-duration: 0.3s;
-  }
+}
   
-  .socialSvg {
+.socialSvg {
     width: 17px;
-  }
+}
   
-  .socialSvg path {
+.socialSvg path {
     fill: rgb(255, 255, 255);
-  }
+}
   
-  .socialContainer:hover .socialSvg {
+.socialContainer:hover .socialSvg {
     animation: slide-in-top 0.3s both;
-  }
+}
   
-  @keyframes slide-in-top {
+@keyframes slide-in-top {
     0% {
       transform: translateY(-50px);
       opacity: 0;
@@ -264,21 +258,21 @@ body {
       transform: translateY(0);
       opacity: 1;
     }
-  }
+}
   
-  /*footer*/
-  #footer-content{
+/*footer*/
+#footer-content{
       padding: 0 8rem;
-  }
-  #footer-oszlop3{
+}
+#footer-oszlop3{
       padding: 0 0 0 3rem;
-  }
-  .footer-emailbox{
+}
+.footer-emailbox{
       display: flex;
       align-items: center;
-  }
+}
     
-  .footer-emailmezo {
+.footer-emailmezo {
       min-height: 35px;
       max-width: 150px;
       padding: 0 1rem;
@@ -287,9 +281,9 @@ body {
       border: 1px solid #fff;
       border-radius: 6px 0 0 6px;
       background-color: transparent;
-  }
-    
-  .footer-emailgomb {
+}
+  
+.footer-emailgomb {
       min-height: 10px;
       padding: .5em 1em;
       border: none;
@@ -299,46 +293,46 @@ body {
       font-size: 15px;
       cursor: pointer;
       transition: background-color .3s ease-in-out;
-  }
+}
     
-  .footer-emailgomb:hover {
+.footer-emailgomb:hover {
       background-color: var(--d);
-  }
+}
     
-  .input:focus, .input:focus-visible {
+.input:focus, .input:focus-visible {
       border-color: #3898EC;
       outline: none;
-  }
-  /*ikonok*/
-  #footer-icons{
+}
+/*ikonok*/
+#footer-icons{
       padding: 0 0 0 5rem;
-  }
+}
   
-  .social-icons{
+.social-icons{
       display: flex;
       align-items:start;
       justify-content: start;
       padding: 0;
-  }
+}
   
-  .social-icons li{
+.social-icons li{
       padding: 1.5rem 1rem 0 1rem;
       list-style-type: none;
-  }
+}
   
-  .social-icons li:first-child{
+.social-icons li:first-child{
       padding-right: 1rem;
-  }
+}
   
-  .social-icons a{
+.social-icons a{
       color: white;
-  }
+}
   
-  .social-icons svg:hover{
+.social-icons svg:hover{
       color: var(--s);
-  }
-  /*ikonok*/
-  /*footer*/
+}
+/*ikonok*/
+/*footer*/
   
 /*media - xs(0-576) sm(576-768) md(768-992) lg(992-1200) xl(1200-1500)*/
 @media only screen and (max-width: 2000px) {
@@ -346,7 +340,7 @@ body {
         max-width: 55rem;
     }
     .index_box h1{
-        font-size: 2.5rem;
+        font-size: 2.3rem;
     }
     .index_box p{
         font-size: 1.3rem;
@@ -357,6 +351,7 @@ body {
     }
     .index_alcim{
         padding: 2rem 0;
+        text-align: center;
     }
     .index_sokcim{
         font-size: 1.9rem;
@@ -560,7 +555,7 @@ body {
 }
 @media only screen and (max-width: 768px) {
     .index_box{
-        max-width: 37rem;
+        max-width: 35rem;
     }
     .index_box h1{
         font-size: 1.5rem;
@@ -689,6 +684,9 @@ body {
     }
 }
 @media only screen and (max-width: 480px) {
+    .index_box{
+        left:5%;
+    }
     .index_box h1{
         font-size: 1.25rem;
     }
@@ -789,7 +787,7 @@ body {
       font-size:0.8rem;
     }
 }
-@media only screen and (max-width: 382px) {
+@media only screen and (max-width: 350px) {
 }
 #box1{
     display: flex;
