--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
     --d: #74c69d;
     --s: #52b788;
     --f: #40916c;
-    --base-color: #C2FFC7;  
+    --base-color: #2d6a4f;  
     --h: #1b4332;
     --text-color: #FFFFFF;
     --i: #081c15;
