--- a/css/styles.css
+++ b/css/styles.css
@@ -1393,150 +1393,8 @@ html {
 map area {
     cursor: pointer;
 }
-/*#bodymap {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-  }
-  
- #bodymap .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    max-width: 1200px;
-    width: 100%;
-  }
-.view {
-    position: relative;
-    flex: 1 1 500px; alapértelmezett szélesség, de csökkenhet kisebb képernyőn 
-    aspect-ratio: 600 / 1280;
-    min-width: 300px;
-    max-width: 600px;
-  }
-  
-  .view img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-  }
-  .view canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-    pointer-events: none;
-  }
-  
-map area {
-    cursor: pointer;
-}
 
-/*#bodymap {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 20px;
-    overflow-x: hidden;
-
-
-}
-#bodymap .container {
-
-
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 20px;
-    max-width: 100%;
-    width: 100%;
-    justify-content: center;
-} 
-.view {
-    position: relative;
-
-    width: 100%;
-    max-width: 600px; 
-    aspect-ratio: 3 / 6.4; 
-    flex: 1 1 auto;
-}
-#bodymap img {
-    display: block;
-    top: 0;
-    left: 0;
-    position: absolute;
-    
-    width: 100%;
-    height: auto;
-
-    
-    
-}
-#bodymap canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 600px;
-    height: 1280px;
-    pointer-events: none;
-    z-index: 2;
-    display: block;
-
-    width: 100%;
-    height: auto;
-}
-map area {
-    cursor: pointer;
-}*/
-/*#bodymap {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-  }
-  
- #bodymap .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    max-width: 1200px;
-    width: 100%;
-  }
-.view {
-    position: relative;
-    flex: 1 1 500px; alapértelmezett szélesség, de csökkenhet kisebb képernyőn 
-    aspect-ratio: 600 / 1280;
-    min-width: 300px;
-    max-width: 600px;
-  }
-  
-  .view img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-  }
-  .view canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: block;
-    pointer-events: none;
-  }
-  
-map area {
-    cursor: pointer;
-}*/
+/*blog*/
 #hatter {
     width: 100%;
     height: 100vh;
